--- a/src/index.html
+++ b/src/index.html
@@ -89,13 +89,14 @@
           <li class="member" role="button" tabindex="0">
             <div class="member__top">
               <div class="member__avatar">
-                <img src="images/avatar-gideon.png" alt="">
+                <img src="images/avatar-gideon.jpg" alt="">
               </div>
-              <div class="member__name">Gideon <br>Heilbron 1</div>
-              <div class="member__title"></div>
+              <h1 class="member__name">Gideon <br>Heilbron 1</h1>
+              <h2 class="member__title">Front-end developer</h2>
+              <h3 class="member__tags">Flexible, creative & precise</h3>
             </div>
             <div class="member__description">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam nisi rerum sapiente error exercitationem fugiat, cumque harum quibusdam sed a ipsam, officia adipisci reprehenderit magni dolor voluptatum. Deserunt, nisi, quibusdam.
+              My specialty is bridging the gap between design and code. My framework of choice is Vue.js for writing clean and clear components, while using BEM and SCSS.
             </div>
             <div class="member__footer">
               <a class="member__anchor" title="Go to Gideon Heilbron's portfolio" href="https://gideonheilbron.nl" target="_blank" rel="noopener noreferrer">
@@ -107,10 +108,11 @@
           <li class="member" role="button" tabindex="0">
             <div class="member__top">
               <div class="member__avatar">
-                <img src="images/avatar-murtada.png" alt="">
+                <img src="images/avatar-murtada.jpg" alt="">
               </div>
-              <div class="member__name">Murtada <br>al Mousawy 1</div>
-              <div class="member__title"></div>
+              <h1 class="member__name">Murtada <br>al Mousawy 1</h1>
+              <h2 class="member__title">Full-stack developer</h2>
+              <h3 class="member__tags">Smart & dedicated</h3>
             </div>
             <div class="member__description">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam nisi rerum sapiente error exercitationem fugiat, cumque harum quibusdam sed a ipsam, officia adipisci reprehenderit magni dolor voluptatum. Deserunt, nisi, quibusdam.
@@ -125,13 +127,14 @@
           <li class="member" role="button" tabindex="0">
             <div class="member__top">
               <div class="member__avatar">
-                <img src="images/avatar-gideon.png" alt="">
+                <img src="images/avatar-gideon.jpg" alt="">
               </div>
-              <div class="member__name">Gideon <br>Heilbron 2</div>
-              <div class="member__title"></div>
+              <h1 class="member__name">Gideon <br>Heilbron 2</h1>
+              <h2 class="member__title">Front-end developer</h2>
+              <h3 class="member__tags">Flexible, creative & precise</h3>
             </div>
             <div class="member__description">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam nisi rerum sapiente error exercitationem fugiat, cumque harum quibusdam sed a ipsam, officia adipisci reprehenderit magni dolor voluptatum. Deserunt, nisi, quibusdam.
+              My specialty is bridging the gap between design and code. My framework of choice is Vue.js for writing clean and clear components, while using BEM and SCSS.
             </div>
             <div class="member__footer">
               <a class="member__anchor" title="Go to Gideon Heilbron's portfolio" href="https://gideonheilbron.nl" target="_blank" rel="noopener noreferrer">
@@ -143,10 +146,11 @@
           <li class="member" role="button" tabindex="0">
             <div class="member__top">
               <div class="member__avatar">
-                <img src="images/avatar-murtada.png" alt="">
+                <img src="images/avatar-murtada.jpg" alt="">
               </div>
-              <div class="member__name">Murtada <br>al Mousawy 2</div>
-              <div class="member__title"></div>
+              <h1 class="member__name">Murtada <br>al Mousawy 2</h1>
+              <h2 class="member__title">Full-stack developer</h2>
+              <h3 class="member__tags">Smart & dedicated</h3>
             </div>
             <div class="member__description">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam nisi rerum sapiente error exercitationem fugiat, cumque harum quibusdam sed a ipsam, officia adipisci reprehenderit magni dolor voluptatum. Deserunt, nisi, quibusdam.
@@ -161,13 +165,14 @@
           <li class="member" role="button" tabindex="0">
             <div class="member__top">
               <div class="member__avatar">
-                <img src="images/avatar-gideon.png" alt="">
+                <img src="images/avatar-gideon.jpg" alt="">
               </div>
-              <div class="member__name">Gideon <br>Heilbron 3</div>
-              <div class="member__title"></div>
+              <h1 class="member__name">Gideon <br>Heilbron 3</h1>
+              <h2 class="member__title">Front-end developer</h2>
+              <h3 class="member__tags">Flexible, creative & precise</h3>
             </div>
             <div class="member__description">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam nisi rerum sapiente error exercitationem fugiat, cumque harum quibusdam sed a ipsam, officia adipisci reprehenderit magni dolor voluptatum. Deserunt, nisi, quibusdam.
+              My specialty is bridging the gap between design and code. My framework of choice is Vue.js for writing clean and clear components, while using BEM and SCSS.
             </div>
             <div class="member__footer">
               <a class="member__anchor" title="Go to Gideon Heilbron's portfolio" href="https://gideonheilbron.nl" target="_blank" rel="noopener noreferrer">
