feat(banner): Add static animations and blobs.
feat(home): Add breakpoints to sections, headings, header, banner, etc.

--- a/src/index.html
+++ b/src/index.html
@@ -56,6 +56,8 @@
     </header>
     <main id="home">
       <section class="banner">
+        <div class="banner__blob banner__blob--1"></div>
+        <div class="banner__blob banner__blob--2"></div>
         <div class="banner__container">
           <div class="banner__heading">
             <img src="images/banner-heading.png" alt="">
