--- a/src/index.html
+++ b/src/index.html
@@ -85,6 +85,7 @@
           <div class="section__column">
             <h1>Choose your own <span class="strikethrough">adventure</span> team</h1>
             <p class="section__description">Not every project needs an agency with project managers, marketeers and a big building. Pay only for who/what you really need!</p>
+            <div class="section__note">Swipe for more members</div>
           </div>
         </div>
         <ul class="members">
