feat(contact): Update contact form.

--- a/src/index.html
+++ b/src/index.html
@@ -56,8 +56,6 @@
     </header>
     <main id="home">
       <section class="banner">
-        <div class="banner__blob banner__blob--1"></div>
-        <div class="banner__blob banner__blob--2"></div>
         <div class="banner__container">
           <div class="banner__heading">
             <img src="images/banner-heading.png" alt="">
@@ -85,7 +83,6 @@
           <div class="section__column">
             <h1>Choose your own <span class="strikethrough">adventure</span> team</h1>
             <p class="section__description">Not every project needs an agency with project managers, marketeers and a big building. Pay only for who/what you really need!</p>
-            <div class="section__note">Swipe for more members</div>
           </div>
         </div>
         <ul class="members">
@@ -240,6 +237,7 @@
               <!-- Start form -->
               <div class="contact-form__step contact__selection">
                 <div class="contact-form__step-content">
+                  <h3>Get in touch with your own team of superstars.</h3>
                   <div class="team-overview is-hidden">
                     <div class="team-overview__content">
                       <div class="team-overview__title"></div>
