--- a/src/index.html
+++ b/src/index.html
@@ -115,7 +115,7 @@
               <h3 class="member__tags">Smart & dedicated</h3>
             </div>
             <div class="member__description">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam nisi rerum sapiente error exercitationem fugiat, cumque harum quibusdam sed a ipsam, officia adipisci reprehenderit magni dolor voluptatum. Deserunt, nisi, quibusdam.
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam nisi rerum sapiente error exercitationem fugiat, cumque harum quibusdam sed a ipsam.
             </div>
             <div class="member__footer">
               <a class="member__anchor" title="Go to Murtada al Mousawy's portfolio" href="https://murtada.nl/" target="_blank" rel="noopener noreferrer">
@@ -153,7 +153,7 @@
               <h3 class="member__tags">Smart & dedicated</h3>
             </div>
             <div class="member__description">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam nisi rerum sapiente error exercitationem fugiat, cumque harum quibusdam sed a ipsam, officia adipisci reprehenderit magni dolor voluptatum. Deserunt, nisi, quibusdam.
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam nisi rerum sapiente error exercitationem fugiat, cumque harum quibusdam sed a ipsam.
             </div>
             <div class="member__footer">
               <a class="member__anchor" title="Go to Murtada al Mousawy's portfolio" href="https://murtada.nl/" target="_blank" rel="noopener noreferrer">
