feat(cart): Add member function to cart details and make cart responsive.

--- a/src/index.html
+++ b/src/index.html
@@ -401,7 +401,10 @@
       <div class="cart-item">
         <div class="cart-item__content">
           <div class="cart-item__image"></div>
-          <div class="cart-item__title"></div>
+          <div class="cart-item__details">
+            <div class="cart-item__title"></div>
+            <div class="cart-item__subtitle"></div>
+          </div>
           <div class="cart-item__remove"></div>
         </div>
       </div>
