fix(navigation): Change anchor labels.

--- a/src/index.html
+++ b/src/index.html
@@ -22,10 +22,10 @@
               <a class="navigation__anchor" href="#members">Members</a>
             </li>
             <li class="navigation__item">
-              <a class="navigation__anchor" href="#clients">Clients</a>
+              <a class="navigation__anchor" href="#clients">Clients &amp; Projects</a>
             </li>
             <li class="navigation__item">
-              <a class="navigation__anchor" href="#contact">Contact</a>
+              <a class="navigation__anchor" href="#contact">Contact us</a>
             </li>
           </ul>
         </nav>
@@ -231,7 +231,7 @@
 
       <section class="section section--contact" id="contact">
         <div class="section__container">
-          <h1>Contact</h1>
+          <h1>Contact us</h1>
           <div class="contact" data-step="0">
             <img class="contact__stamp contact__stamp--1" src="images/stamp-1.svg" alt="">
             <img class="contact__stamp contact__stamp--2" src="images/stamp-2.svg" alt="">
