fix(contact): Add new starting screen.
fix(app): Change some content.

--- a/src/index.html
+++ b/src/index.html
@@ -233,8 +233,8 @@
         <div class="section__container">
           <h1>Contact us</h1>
           <div class="contact" data-step="0">
-            <img class="contact__stamp contact__stamp--1" src="images/stamp-1.svg" alt="">
-            <img class="contact__stamp contact__stamp--2" src="images/stamp-2.svg" alt="">
+<!--             <img class="contact__stamp contact__stamp--1" src="images/stamp-1.svg" alt="">
+            <img class="contact__stamp contact__stamp--2" src="images/stamp-2.svg" alt=""> -->
             <div class="contact__steps-overview"></div>
             <div class="contact-form">
               <!-- Start form -->
@@ -247,17 +247,15 @@
                       <div class="team-overview__members"></div>
                     </div>
                   </div>
-                  <p>You can contact us through our interactive form or just send us an e-mail.</p>
-                  <div class="horizontal-separator">
-                    <div class="horizontal-separator__section">
-                      <button class="button button--primary button--arrow-right next-step-button">Answer a few questions</button>
+                  <h3>How would you like to contact us?</h3>
+                  <p>We recommend using the form, we promise it won’t take long!</p>
+                  <div class="selection-box">
+                    <div class="selection-box__column">
+                      <button class="button button--primary next-step-button">Answer a few questions</button>
                     </div>
-                    <span class="separator">or</span>
-                    <div class="horizontal-separator__section">
-                      <a href="/email" class="email-link">
-                        Mail us at:
-                        <span>hello@cursief.co</span>
-                      </a>
+                    <div class="selection-box__seperator">OR</div>
+                    <div class="selection-box__column">
+                      <a href="/email">Mail us at: <span>hello@cursief.co</span></a>
                     </div>
                   </div>
                 </div>
@@ -368,9 +366,6 @@
 
     <footer class="footer footer--primary">
       <div class="footer__container">
-        <a class="footer__logo" href="#home">
-          <img src="images/logo.svg" alt="">
-        </a>
         <span>&copy; 2019 Cursief. All rights reserved.</span>
         <ul class="social social--footer">
           <li class="social-item">
