fix(app): Fix styling inconsistencies.

--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,7 @@
             <a class="readmore" href="#" title="Read more about what Cursief is">Read more</a>
           </div>
           <div class="section__column section__media">
-            <img src="images/introduction.svg" alt="">
+            <img src="images/introduction-o.svg" alt="">
           </div>
         </div>
       </section>
@@ -240,14 +240,16 @@
               <!-- Start form -->
               <div class="contact-form__step contact__selection">
                 <div class="contact-form__step-content">
-                  <h3 class="contact-form__step-title">Get in touch with your own team of superstars.</h3>
-                  <div class="team-overview is-hidden">
-                    <div class="team-overview__content">
-                      <p class="team-overview__title"></p>
-                      <div class="team-overview__members"></div>
+                  <div class="contact-form__step-wrapper">
+                    <h3 class="contact-form__step-title">Get in touch with your own team of superstars.</h3>
+                    <div class="team-overview is-hidden">
+                      <div class="team-overview__content">
+                        <p class="team-overview__title"></p>
+                        <div class="team-overview__members"></div>
+                      </div>
                     </div>
+                    <p>You can contact us through our interactive form or just send us an e-mail.</p>
                   </div>
-                  <p>You can contact us through our interactive form or just send us an e-mail.</p>
                   <div class="horizontal-separator">
                     <div class="horizontal-separator__section">
                       <button class="button button--primary button--arrow-right next-step-button">Answer a few questions</button>
