fix(member): Change and add members.

--- a/src/index.html
+++ b/src/index.html
@@ -92,14 +92,14 @@
           <li class="member" role="button" tabindex="0">
             <div class="member__top">
               <div class="member__avatar">
-                <img src="images/avatar-gideon.jpg" alt="">
+                <img src="images/avatar-tamara.jpg" alt="">
               </div>
-              <h1 class="member__name">Gideon <br>Heilbron 1</h1>
-              <h2 class="member__title">Front-end developer</h2>
-              <h3 class="member__tags">Flexible, creative & precise</h3>
+              <h1 class="member__name">Tamara <br>Duijvestijn</h1>
+              <h2 class="member__title">Copywriter</h2>
+              <h3 class="member__tags">Analytical & problem solver</h3>
             </div>
             <div class="member__description">
-              My specialty is bridging the gap between design and code. My framework of choice is Vue.js for writing clean and clear components, while using BEM and SCSS.
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus qui molestiae, sint magni. Obcaecati, impedit, hic? Cupiditate ex, nihil facere ipsum culpa sapiente obcaecati numquam.
             </div>
             <div class="member__footer">
               <a class="member__anchor" title="Go to Gideon Heilbron's portfolio" href="https://gideonheilbron.nl" target="_blank" rel="noopener noreferrer">
@@ -113,12 +113,12 @@
               <div class="member__avatar">
                 <img src="images/avatar-murtada.jpg" alt="">
               </div>
-              <h1 class="member__name">Murtada <br>al Mousawy 1</h1>
+              <h1 class="member__name">Murtada <br>al Mousawy</h1>
               <h2 class="member__title">Full-stack developer</h2>
               <h3 class="member__tags">Smart & dedicated</h3>
             </div>
             <div class="member__description">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam nisi rerum sapiente error exercitationem fugiat, cumque harum quibusdam sed a ipsam.
+              I focus on keeping the code jungle from growing wild by finding the right tool for the right job, advising the team on how to strategize for the next feature and writing clean, maintainable code myself.
             </div>
             <div class="member__footer">
               <a class="member__anchor" title="Go to Murtada al Mousawy's portfolio" href="https://murtada.nl/" target="_blank" rel="noopener noreferrer">
@@ -132,7 +132,7 @@
               <div class="member__avatar">
                 <img src="images/avatar-gideon.jpg" alt="">
               </div>
-              <h1 class="member__name">Gideon <br>Heilbron 2</h1>
+              <h1 class="member__name">Gideon <br>Heilbron</h1>
               <h2 class="member__title">Front-end developer</h2>
               <h3 class="member__tags">Flexible, creative & precise</h3>
             </div>
