feat(header): Add mobile logo.

--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,11 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <a class="mobile-logo" href="#home" title="Cursief web collective">
+      <img src="images/logo.svg" alt="Cursief logo">
+    </a>
     <header class="header header--primary">
-        <div class="header__container">
+      <div class="header__container">
         <a class="header__logo" href="#home" title="Cursief web collective">
           <img src="images/logo.svg" alt="Cursief logo">
         </a>
